--- a/AppMVC/Views/Auth/Login.cshtml
+++ b/AppMVC/Views/Auth/Login.cshtml
@@ -5,21 +5,23 @@
     Layout = "_Layout";
 }
 
-<div class="mb-3">
-    <p class="fs-2">Вход</p>
-</div>
+<h2>@ViewBag.Title</h2>
 
 <form method="post" asp-controller="Auth" asp-action="Login">
     <div class="mb-3">
         <label for="email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="email" name="Email" placeholder="Введите адрес электронной почты" required/>
+        <input type="email" class="form-control" id="email" name="Email" value="@Model.Email"/>
+        <span asp-validation-for="Email" class="text-danger"></span>
     </div>
     <div class="mb-3">
         <label for="password" class="form-label">Пароль</label>
-        <input type="password" class="form-control" id="password" name="Password" placeholder="Введите пароль" required/>
+        <input type="password" class="form-control" id="password" name="Password"/>
+        <span asp-validation-for="Password" class="text-danger"></span>
     </div>
-    <div class="d-flex">
-        <button class="btn btn-outline-success me-2" type="submit">Войти</button>
-        <a class="btn btn-outline-danger" asp-controller="Article" asp-action="List">Назад</a>
-    </div>
+    <button type="submit" class="btn btn-outline-success">Войти</button>
+    <a class="btn btn-outline-danger" asp-controller="Home" asp-action="Index">Назад</a>
 </form>
+
+<div>
+    <span>Еще нет аккаунта? <a asp-controller="Auth" asp-action="Register">Зарегистрируйтесь</a></span>
+</div>
