--- a/AppMVC/Views/Role/EditForm.cshtml
+++ b/AppMVC/Views/Role/EditForm.cshtml
@@ -19,6 +19,7 @@
     <input type="hidden" value="@Model.Id" name="Id"/>
     <div class="mb-3">
         <input type="text" class="form-control" id="name" placeholder="Введите роль" value="@Model.Name" name="Name"/>
+        <span asp-validation-for="Name"></span>
     </div>
     <button class="btn btn-outline-success" type="submit">Сохранить</button>
     <a class="btn btn-outline-danger" asp-controller="Role" asp-action="List">Назад</a>
